--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
+    "pug": "^3.0.2",
     "qs": "^6.11.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
@@ -62,7 +63,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "ui": "browser-sync start --config bs-config.js"
   },
   "repository": {
     "type": "git",
