#3 Added insert function.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "ms": "^2.0.0",
+    "mysql": "^2.18.1",
     "negotiator": "^0.6.3",
     "object-inspect": "^1.12.2",
     "on-finished": "^2.4.1",
@@ -63,7 +64,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "build": "npm install express --save && npm install -g nodemon && npm install -g browser-sync && npm install pug",
+    "build": "npm install express --save && npm install -g nodemon && npm install -g browser-sync && npm install pug && npm install mysql",
     "dev": "nodemon app.js",
     "ui": "browser-sync start --config bs-config.js"
   },
