--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net-dt": "^1.13.1",
     "express": "^4.18.2",
     "jquery": "^3.6.3",
+    "jsdom": "^21.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
