--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple video game library",
   "main": "app.js",
   "scripts": {
-    "build": "npm install express nodemon browser-sync pug mysql jquery datatables.net datatables.net-dt --save",
+    "build": "npm install express nodemon browser-sync pug mysql jquery datatables.net datatables.net-dt sequelize mysql2 --save",
     "dev": "nodemon app.js",
     "ui": "browser-sync start --config bs-config.js",
     "gamelibrary": "nodemon app.js && browser-sync start --config bs-config.js"
@@ -30,7 +30,10 @@
     "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "npm": "^9.3.0",
+    "pug": "^3.0.2",
+    "sequelize": "^6.28.0"
   }
 }
