--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple video game library",
   "main": "app.js",
   "scripts": {
-    "build": "npm install express nodemon browser-sync pug mysql jquery datatables.net datatables.net-dt sequelize sequelize-cli mysql2 --save",
+    "build": "npm install express nodemon browser-sync pug mysql jquery sequelize sequelize-cli mysql2 --save",
     "dev": "nodemon app.js",
     "ui": "browser-sync start --config bs-config.js",
     "gamelibrary": "nodemon app.js && browser-sync start --config bs-config.js"
@@ -23,18 +23,16 @@
   },
   "homepage": "https://github.com/20rp/game-library#readme",
   "dependencies": {
-    "browser-sync": "^2.27.11",
-    "datatables.net": "^1.13.1",
-    "datatables.net-dt": "^1.13.1",
+    "browser-sync": "^2.29.1",
     "express": "^4.18.2",
-    "jquery": "^3.6.3",
+    "jquery": "^3.7.0",
     "jsdom": "^21.0.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.0.1",
-    "nodemon": "^2.0.20",
-    "npm": "^9.3.0",
+    "mysql2": "^3.3.1",
+    "nodemon": "^2.0.22",
+    "npm": "^9.6.6",
     "pug": "^3.0.2",
-    "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0"
   }
 }
