--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple video game library",
   "main": "app.js",
   "scripts": {
-    "build": "npm install express nodemon browser-sync pug mysql jquery sequelize sequelize-cli mysql2 --save",
+    "build": "npm install express nodemon browser-sync pug mysql jquery sequelize sequelize-cli mysql2 body-parser --save",
     "dev": "nodemon app.js",
     "ui": "browser-sync start --config bs-config.js",
     "gamelibrary": "nodemon app.js && browser-sync start --config bs-config.js"
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/20rp/game-library#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "browser-sync": "^2.29.1",
     "express": "^4.18.2",
     "jquery": "^3.7.0",
